--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-# Project specific
+# Project
 config/development.json
 config/production.json
 config/staging.json
 config/test.json
+data_generatator/data
 
-# OS X
+# OSX
 .DS_Store
 
 # Logs
@@ -26,12 +27,10 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
-# Compiled Dirs (http://nodejs.org/api/addons.html)
+# Compiled directories (http://nodejs.org/api/addons.html)
 build/
 dist/
 
-# Dependency directorys
-# Deployed apps should consider commenting these lines out:
-# see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
+# Dependency directories
 node_modules/
 bower_components/
