--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/v1x1e/hrsf84-thesis#readme",
   "dependencies": {
+    "elastic-apm-node": "^0.9.0",
     "express": "^4.16.2",
-    "sequelize": "^4.28.5"
+    "pg": "^6.4.2",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.28.6"
   },
   "devDependencies": {
     "faker": "^4.1.0"
