--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Amazon Users service",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./server/api.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/v1x1e/hrsf84-thesis#readme",
   "dependencies": {
+    "axios": "^0.17.1",
+    "bookshelf": "^0.12.0",
     "elastic-apm-node": "^0.9.0",
     "express": "^4.16.2",
+    "knex": "^0.14.2",
     "pg": "^6.4.2",
-    "pg-hstore": "^2.3.2",
     "sequelize": "^4.28.6"
   },
   "devDependencies": {
